Add fixed header and update font families

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hojin Chang</title>
-        <!-- Roboto and Noto Sans Mono Font Import -->
+        <!-- Inter, Montserrat, and Roboto Font Import -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles/normalize-fwd.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/styles.css">
         <script src="scripts/script.js" defer></script>
     </head>
@@ -18,7 +17,7 @@
                 <img class="logo" src="images/logo.svg" alt="Hojin Chang's logo">
 
                 <button class="menu-toggle" aria-controls="header-menu" aria-expanded="false" aria-label="Menu Toggle">
-					<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24">
+					<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
 						<title>Menu Icon</title>
 						<path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"></path>
 					</svg>
@@ -33,7 +32,7 @@
 
             <section class="intro-banner">
                 <p>Hello!</p>
-                <p>My name is Hojin</p>
+                <p>My name is <span class="my-name">Hojin</span></p>
                 <p>I'm a Web Developer</p>
             </section>
         </header>
@@ -41,6 +40,13 @@
         <main>
             <section>
                 <h2>About Me</h2>
+                <p>
+                    Hello! My name is Hojin Chang. I graduated in 2021 with a degree in 
+                    Mechatronic Systems Engineering, and have two years of experience 
+                    working as a Deep Learning Engineer. Now, I'm studying and looking to shift
+                    careers careers towards Full-Stack Web Development. Some of my interests 
+                    includes video gaming, badminton, and playing the bass guitar.
+                </p>
             </section>
         </main>
         <footer></footer>
