Add and style about me section

--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
         </header>
 
         <main>
-            <section>
-                <h2>About Me</h2>
-                <p>
-                    Hello! My name is Hojin Chang. I graduated in 2021 with a degree in 
-                    Mechatronic Systems Engineering, and have two years of experience 
-                    working as a Deep Learning Engineer. Now, I'm studying and looking to shift
-                    careers careers towards Full-Stack Web Development. Some of my interests 
-                    includes video gaming, badminton, and playing the bass guitar.
-                </p>
+            <section class="about-me">
+                <div class="about-me-container">
+                    <h1>About Me</h1>
+                    <p>
+                        Hello! My name is Hojin Chang. I graduated in 2021 with a degree in 
+                        Mechatronic Systems Engineering, and have two years of experience 
+                        working as a Deep Learning Engineer. Now, I'm studying and looking to shift
+                        careers careers towards Full-Stack Web Development. Some of my interests 
+                        include video gaming, badminton, and playing the bass guitar.
+                    </p>
+                </div>
             </section>
         </main>
         <footer></footer>
