Add hamburger menu interactivity

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles/styles.css">
+        <script src="scripts/navigation.js" defer></script>
         <script src="scripts/script.js" defer></script>
     </head>
     <body>
         <header id="header">
-            <nav>
+            <nav class="site-navigation" id="site-navigation">
                 <img class="logo" src="images/logo.svg" alt="Hojin Chang's logo">
 
                 <button class="menu-toggle" aria-controls="header-menu" aria-expanded="false" aria-label="Menu Toggle">
