Add project tiles
Clicking the project selector button will display the associated projects.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </header>
 
         <main>
-            <section id="about-me">
+            <section id="about-me-section">
                 <div class="about-me-container container">
                     <h1>About Me</h1>
                     <p>
@@ -52,7 +52,7 @@
                     </p>
                 </div>
             </section>
-            <section id="projects">
+            <section id="projects-section">
                 <div class="projects-header container">
                     <h1>Projects</h1>
                     <div class="projects-selector">
@@ -61,6 +61,50 @@
                         <button id="wordpress" class="project-selector-btn">WordPress</button>
                         <button id="online-store" class="project-selector-btn">Online Stores</button>
                     </div>
+                </div>
+                <div class="html-css-projects projects-container">
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Country Website</p>
+                    </article>
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Business Website</p>
+                    </article>
+                </div>
+                <div class="javascript-projects projects-container">
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>JavaScript Game</p>
+                    </article>
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Movie Database</p>
+                    </article>
+                </div>
+                <div class="wordpress-projects projects-container">
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Vancouver</p>
+                    </article>
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Mindset</p>
+                    </article>
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>School</p>
+                    </article>
+                </div>
+                <div class="online-stores projects-container">
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>Shopify Store</p>
+                    </article>
+                    <article>
+                        <h2>Coming Soon</h2>
+                        <p>WooCommerce Store</p>
+                    </article>
                 </div>
             </section>
         </main>
