--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</button>
 
                 <ul class="header-menu">
-                    <li><a href="#about-me">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about-me-section">About</a></li>
+                    <li><a href="#projects-section">Projects</a></li>
+                    <li><a href="#footer-section">Contact</a></li>
                 </ul>
             </nav>
 
@@ -39,7 +39,7 @@
             </section>
         </header>
 
-        <main>
+        <main id="main">
             <section id="about-me-section">
                 <div class="about-me-container container">
                     <h1>About Me</h1>
@@ -108,6 +108,14 @@
                 </div>
             </section>
         </main>
-        <footer></footer>
+        <footer id="footer-section">
+            <div id="contact-me">
+                <p>Let's work together!</p>
+                <a href="mailto:hojinc1223@gmail.com">Contact Me</a>
+            </div>
+
+
+            <p class="copyright">&copy; 2023 Hojin Chang</p>
+        </footer>
     </body>
 </html>
