Reformat project articles

--- a/index.html
+++ b/index.html
@@ -64,46 +64,46 @@
                 </div>
                 <div class="html-css-projects projects-container">
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Country Website</p>
+                        <h2>Country Website</h2>
+                        <p>Coming Soon</p>
                     </article>
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Business Website</p>
+                        <h2>Business Website</h2>
+                        <p>Coming Soon</p>
                     </article>
                 </div>
                 <div class="javascript-projects projects-container">
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>JavaScript Game</p>
+                        <h2>JavaScript Game</h2>
+                        <p>Coming Soon</p>
                     </article>
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Movie Database</p>
+                        <h2>Movie Database</h2>
+                        <p>Coming Soon</p>
                     </article>
                 </div>
                 <div class="wordpress-projects projects-container">
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Vancouver</p>
+                        <h2>Vancouver</h2>
+                        <p>Coming Soon</p>
                     </article>
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Mindset</p>
+                        <h2>Mindset</h2>
+                        <p>Coming Soon</p>
                     </article>
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>School</p>
+                        <h2>School</h2>
+                        <p>Coming Soon</p>
                     </article>
                 </div>
                 <div class="online-stores projects-container">
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>Shopify Store</p>
+                        <h2>Shopify Store</h2>
+                        <p>Coming Soon</p>
                     </article>
                     <article>
-                        <h2>Coming Soon</h2>
-                        <p>WooCommerce Store</p>
+                        <h2>WooCommerce Store</h2>
+                        <p>Coming Son</p>
                     </article>
                 </div>
             </section>
