Add navigation down button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&display=swap" rel="stylesheet">
+        <!-- Favicon import -->
         <link rel="icon" type="image/x-icon" href="images/logo.svg">
+        <!-- Google Icons import -->
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
         <link rel="stylesheet" href="styles/styles.css">
         <script src="scripts/navigation.js" defer></script>
         <script src="scripts/script.js" defer></script>
@@ -36,6 +40,9 @@
                 <p>Hello!</p>
                 <p>My name is <span class="my-name">Hojin</span></p>
                 <p>I'm a Web Developer</p>
+                <a class="nav-down-btn" href="#about-me-section">
+                    <span id="nav-down" class="material-symbols-outlined">expand_more</span>
+                </a
             </section>
         </header>
 
