Adjust project card styling

--- a/index.html
+++ b/index.html
@@ -72,45 +72,45 @@
                 <div class="html-css-projects projects-container">
                     <article>
                         <h2>Country Website</h2>
-                        <p>Coming Soon</p>
+                        <p>HTML/CSS</p>
                     </article>
                     <article>
                         <h2>Business Website</h2>
-                        <p>Coming Soon</p>
+                        <p>HTML/CSS</p>
                     </article>
                 </div>
                 <div class="javascript-projects projects-container">
                     <article>
                         <h2>JavaScript Game</h2>
-                        <p>Coming Soon</p>
+                        <p>JavaScript</p>
                     </article>
                     <article>
                         <h2>Movie Database</h2>
-                        <p>Coming Soon</p>
+                        <p>JavaScript</p>
                     </article>
                 </div>
                 <div class="wordpress-projects projects-container">
                     <article>
                         <h2>Vancouver</h2>
-                        <p>Coming Soon</p>
+                        <p>Wordpress</p>
                     </article>
                     <article>
                         <h2>Mindset</h2>
-                        <p>Coming Soon</p>
+                        <p>Wordpress</p>
                     </article>
                     <article>
                         <h2>School</h2>
-                        <p>Coming Soon</p>
+                        <p>Wordpress</p>
                     </article>
                 </div>
                 <div class="online-stores projects-container">
                     <article>
                         <h2>Shopify Store</h2>
-                        <p>Coming Soon</p>
+                        <p>Online Stores</p>
                     </article>
                     <article>
                         <h2>WooCommerce Store</h2>
-                        <p>Coming Son</p>
+                        <p>Online Stores</p>
                     </article>
                 </div>
             </section>
