--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                         Hello, my name is Hojin Chang! I graduated in 2021 with a degree in 
                         Mechatronic Systems Engineering and have two years of experience 
                         working as a Deep Learning Engineer. Now, I'm studying and looking to shift
-                        careers careers towards Full-Stack Web Development. Some of my interests 
-                        include video games, badminton, and playing the bass guitar.
+                        careers towards Full-Stack Web Development. Some of my interests 
+                        include video games, playing badminton, and jamming on the bass guitar.
                     </p>
                 </div>
             </section>
@@ -157,44 +157,53 @@
                 <div class="html-css-projects projects-container">
                     <article>
                         <h2>Country Website</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>HTML/CSS</p>
                     </article>
                     <article>
                         <h2>Business Website</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>HTML/CSS</p>
                     </article>
                 </div>
                 <div class="javascript-projects projects-container">
                     <article>
                         <h2>JavaScript Game</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>JavaScript</p>
                     </article>
                     <article>
                         <h2>Movie Database</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>JavaScript</p>
                     </article>
                 </div>
                 <div class="wordpress-projects projects-container">
                     <article>
                         <h2>Vancouver</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
                     </article>
                     <article>
                         <h2>Mindset</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
                     </article>
                     <article>
                         <h2>School</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
                     </article>
                 </div>
                 <div class="online-stores projects-container">
                     <article>
                         <h2>Shopify Store</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Online Stores</p>
                     </article>
                     <article>
                         <h2>WooCommerce Store</h2>
+                        <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Online Stores</p>
                     </article>
                 </div>
