Add footer social medias

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <link rel="icon" type="image/x-icon" href="images/logo.svg">
         <!-- Google Icons import -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined">
+        <!-- Font Awesome import -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Style CSS -->
         <link rel="stylesheet" href="styles/styles.css">
         <script src="scripts/navigation.js" defer></script>
         <script src="scripts/script.js" defer></script>
@@ -210,13 +213,20 @@
             </section>
         </main>
         <footer id="footer-section">
-            <div id="contact-me">
+            <div class="contact-me">
                 <p>Let's work together!</p>
                 <a href="mailto:hojinc1223@gmail.com">Contact Me</a>
             </div>
 
-
-            <p class="copyright">&copy; 2023 Hojin Chang</p>
+            <div class="social-media-container">
+                <a href="https://github.com/hojinchang" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-github" aria-label="Link to Github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/hojin-chang-316084157/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-linkedin" aria-label="Link to Linkedin"></i>
+                </a>
+            </div>
+            <p class="copyright">&copy; 2023 <span class="footer-name">Hojin Chang</span></p>
         </footer>
     </body>
 </html>
