Add nav up button in footer

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
             </section>
         </main>
         <footer id="footer-section">
+            <a class="nav-up-btn" href="#">
+                <span id="nav-up" class="material-symbols-outlined">arrow_upward</span>
+            </a>
+
             <div class="contact-me">
                 <p>Let's work together!</p>
                 <a href="mailto:hojinc1223@gmail.com">Contact Me</a>
