--- a/index.html
+++ b/index.html
@@ -158,56 +158,83 @@
                     </div>
                 </div>
                 <div class="html-css-projects projects-container">
-                    <article>
+                    <article class="project-article">
                         <h2>Country Website</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>HTML/CSS</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
-                    <article>
+                    <article class="project-article">
                         <h2>Business Website</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>HTML/CSS</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
                 </div>
                 <div class="javascript-projects projects-container">
-                    <article>
+                    <article class="project-article">
                         <h2>JavaScript Game</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>JavaScript</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
-                    <article>
+                    <article class="project-article">
                         <h2>Movie Database</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>JavaScript</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
                 </div>
                 <div class="wordpress-projects projects-container">
-                    <article>
+                    <article class="project-article">
                         <h2>Vancouver</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
-                    <article>
+                    <article class="project-article">
                         <h2>Mindset</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
-                    <article>
+                    <article class="project-article">
                         <h2>School</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Wordpress</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
                 </div>
                 <div class="online-stores projects-container">
-                    <article>
+                    <article class="project-article">
                         <h2>Shopify Store</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Online Stores</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
-                    <article>
+                    <article class="project-article">
                         <h2>WooCommerce Store</h2>
                         <img src="images/logo.svg" alt="Project placeholder image">
                         <p>Online Stores</p>
+                        <div class="project-overlay">
+                            <p>It's not ready yet :(</p>
+                        </div>
                     </article>
                 </div>
             </section>
