--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</svg>
 				</button>
 
-                <ul class="header-menu">
+                <ul class="nav-menu">
                     <li><a href="#about-me-section">About</a></li>
                     <li><a href="#projects-section">Projects</a></li>
                     <li><a href="#footer-section">Contact</a></li>
